# fair-with-fhir

./: .gitignore  .justfile  README.md  create-graphdb.ipynb  ddl.py  kumls.ipynb  main.py  profiles.ipynb  pyproject.toml  requirements.txt  resources.py  vocabularies.ipynb  who-anc-sct-errors.py
notebooks/: ontology.ipynb
