[project]
name = "fair-with-fhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "aiohttp>=3.11.12",
    "altair>=5.5.0",
    "fsspec>=2025.2.0",
    "ipykernel>=6.29.5",
    "kuzu>=0.8.0",
    "lxml>=5.3.1",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "ruff>=0.9.6",
]
